# AppFormationBackend/AppFormationBackend/src/main/java/com/cni/AppFormationBackend/Auth/AuthController.java
@@ -6,6 +6,7 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.security.core.Authentication;
@@ -76,5 +77,10 @@ public class AuthController {
             @RequestParam String token
     ) throws MessagingException {
         authService.activateAccount(token);
+    }
+
+    @PostMapping("/logout")
+    public void logout() {
+        SecurityContextHolder.clearContext();
     }
 }
