# AppFormationBackend/AppFormationBackend/src/main/java/com/cni/AppFormationBackend/User/UserController.java
@@ -1,0 +1,47 @@
+package com.cni.AppFormationBackend.User;
+
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.mail.MessagingException;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("user")
+@RequiredArgsConstructor
+@Tag(name = "User")
+public class UserController {
+    private final UserService userService;
+
+    @GetMapping("/all")
+    public ResponseEntity<List<User>> findAll() throws MessagingException {
+        List<User> users = userService.findAll();
+        return ResponseEntity.ok(users);
+    }
+
+    @PutMapping("/toggleAccount/{userId}")
+    public ResponseEntity<String> toggleUserAccount(@PathVariable Long userId) {
+        try {
+            boolean toggled = userService.toggleUserAccount(userId);
+            String message = toggled ? "User account unlocked" : "User account locked";
+            return ResponseEntity.ok(message);
+        } catch (RuntimeException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
+    }
+
+    @DeleteMapping("/delete/{userId}")
+    public ResponseEntity<String> deleteUserAccount(@PathVariable("userId") Long userId) {
+        try {
+            userService.deleteUserById(userId);
+            String message = "User account deleted";
+            return ResponseEntity.ok(message);
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(e.getMessage());
+        }
+    }
+
+}
